--- a/EvilMFJR-Labs.html
+++ b/EvilMFJR-Labs.html
@@ -9069,7 +9069,7 @@ Error message and password prompt
 <div created="20190730174803347" modified="20190730174803347" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div created="20190730174945128" list="$:/ControlPanel [[Lab 1 - Login, Edit a File in a Folder and Submit It]] [[Lab 2 - Nmap Enumeration]] [[Lab 3 - She Sells JCL Shells]] [[Lab 4 - Enumeration]] [[Lab 5 - Privesc with APF]]" modified="20190730174945128" title="$:/StoryList">
+<div list="[[Lab 1 - Login, Edit a File in a Folder and Submit It]] [[Lab 2 - Nmap Enumeration]] [[Lab 3 - She Sells JCL Shells]] [[Lab 4 - Enumeration]] [[Lab 5 - Privesc with APF]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9085,7 +9085,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///home/phil/Downloads/EvilMFJR-Labs.html&quot;
+            &quot;text&quot;: &quot;file:///Users/phil/DEV/EvilMainframeJR/EvilMFJR-Labs.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9105,7 +9105,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/home/phil/Downloads/EvilMFJR-Labs.html&quot;
+            &quot;text&quot;: &quot;/Users/phil/DEV/EvilMainframeJR/EvilMFJR-Labs.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9117,11 +9117,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1200&quot;
+            &quot;text&quot;: &quot;900&quot;
         }
     }
 }</pre>
@@ -9235,7 +9235,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190729211912715" modified="20190729214736105" tags="" title="Lab 1 - Login, Edit a File in a Folder and Submit It">
+<div created="20190729211912715" modified="20190730230710316" tags="" title="Lab 1 - Login, Edit a File in a Folder and Submit It">
 <pre>!!''Before Starting - Update''
 * Make sure you have the most up do date labs
 * Update the labs folder:
@@ -9243,7 +9243,7 @@ Error message and password prompt
 * Reload this Wiki by closing your browser and reopening the file
 
 !!''If you get stuck!''
-* Open the Notes wiki in the `/root/Labs/NotesJR` folder
+* Open the Notes wiki in the `/root/LabsJR/` folder
 * Scroll down to ''ISPF Navigation'' for helpful tips on navigating TSO/ISPF
 * Read the screen thoroughly it might tell you your error
 
